infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostile-tweets-ex-deployment
spec:
  selector:
    matchLabels:
      app: hostile-tweets-ex
  template:
    metadata:
      labels:
        app: hostile-tweets-ex
    spec:
      containers:
      - name: hostile-tweets-ex
        image: yitzchakdamen/hostile-tweets-ex:v13
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
